--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .DS_Store
 node_modules/
-/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -16,3 +15,7 @@ selenium-debug.log
 *.njsproj
 *.sln
 test.*
+package.json
+webpack.config.js
+/source/package.json
+/dist/package.json
