--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ygo-card",
-  "version": "1.2.8",
-  "description": "This is a Yu-Gi-Oh card rendering tool.",
-  "main": "card.js",
+  "version": "1.3.0",
+  "description": "This is a Yu-Gi-Oh card rendering SDK.",
+  "main": "dist/cardNode.js",
+  "types": "dist/types/card.d.ts",
   "directories": {
     "lib": "lib"
   },
