--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ygo-card",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "This is a Yu-Gi-Oh card rendering SDK.",
-  "main": "dist/cardNode.js",
+  "main": "dist/index.js",
   "types": "dist/types/card.d.ts",
   "directories": {
     "lib": "lib"
