--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.js",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "node ./test/render-test.js"
   },
   "author": "Yami",
   "license": "ISC",
   "devDependencies": {
     "copy-webpack-plugin": "^6.0.3",
     "html-webpack-plugin": "^4.3.0",
+    "pre-commit": "^1.2.2",
     "ts-loader": "^8.0.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
@@ -24,5 +26,6 @@
   "dependencies": {
     "canvas": "^2.6.1",
     "sqlite3": "^5.0.0"
-  }
+  },
+  "pre-commit": "test"
 }
