--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ygo-card",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "This is a Yu-Gi-Oh card rendering SDK.",
   "directories": {
     "lib": "lib"
@@ -13,6 +13,10 @@
   },
   "author": "Yami",
   "license": "ISC",
+  "dependencies": {
+    "canvas": "^2.6.1",
+    "sqlite3": "^5.0.0"
+  },
   "devDependencies": {
     "copy-webpack-plugin": "^6.0.3",
     "html-webpack-plugin": "^4.3.0",
