fix: 修复一些问题

--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ygo-card",
-  "version": "1.4.0",
+  "version": "1.4.1-4",
   "description": "This is a Yu-Gi-Oh card rendering SDK.",
   "main": "dist/index.js",
   "types": "dist/types/card.d.ts",
